// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxTable renders default 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-61 {
  height: 100%;
}

.emotion-59 {
  font-weight: normal;
}

.emotion-59::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-58 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-49 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-49::-webkit-scrollbar {
  display: none;
}

.emotion-60 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

.emotion-5 {
  display: inline-block;
}

.emotion-32 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-32::-webkit-scrollbar {
  display: none;
}

.emotion-32 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-15 {
  overflow: unset !important;
}

.emotion-15 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-10 {
  box-sizing: border-box;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-10:hover .staticClass_dragHandleWrapper,
.emotion-10:active .staticClass_dragHandleWrapper {
  visibility: visible;
}

.emotion-9 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-8 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
}

.emotion-6 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 1;
  text-align: left;
  text-transform: capitalize;
  font-weight: bold;
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-1 {
  border-color: #DADDE2;
  background-color: #FFF;
  border-style: solid;
  border-width: 1px;
  height: 15px;
  width: 15px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-39 {
  box-sizing: border-box;
  border-bottom: 1px solid #DADDE2;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-38 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 1;
  text-align: left;
}

<div
  class="emotion-61"
>
  <div
    class="emotion-59"
    style="overflow:visible;height:0;width:0"
  >
    <div
      style="height:768px;overflow:visible;width:1024px"
    >
      <div
        style="height:35px;position:relative;width:1024px"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-15"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:194.66666666666666px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:0;top:0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:194.66666666666666px;height:35px;max-width:194.66666666666666px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-10"
              style="height:35px;left:0;position:absolute;top:0;width:24px"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-6"
                  >
                    <div
                      class="emotion-5"
                    >
                      <div>
                        <label
                          class="emotion-4"
                          for="headerCheckbox"
                        >
                          <div
                            class="emotion-2"
                          >
                            <div
                              class="emotion-1"
                            >
                              <input
                                aria-checked="0"
                                class="emotion-0"
                                id="headerCheckbox"
                                type="checkbox"
                              />
                            </div>
                          </div>
                          <div
                            class="emotion-3"
                          >
                            Toggle all rows
                          </div>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-8"
                />
              </div>
            </div>
            <div
              class="emotion-10"
              style="height:35px;left:24px;position:absolute;top:0;width:170.66666666666666px"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-7"
                >
                  name
                </div>
                <div
                  class="emotion-8"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TopRightGrid_ScrollWrapper"
          style="left:194.66666666666666px;overflow-x:hidden;overflow-y:hidden;position:absolute;top:0;height:35px;width:829.3333333333334px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-32"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:829.3333333333334px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:0;top:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:682.6666666666666px;height:35px;max-width:682.6666666666666px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-10"
                style="height:35px;left:0;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-7"
                  >
                    role
                  </div>
                  <div
                    class="emotion-8"
                  />
                </div>
              </div>
              <div
                class="emotion-10"
                style="height:35px;left:170.66666666666666px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-7"
                  >
                    state
                  </div>
                  <div
                    class="emotion-8"
                  />
                </div>
              </div>
              <div
                class="emotion-10"
                style="height:35px;left:341.3333333333333px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-7"
                  >
                    zipcode
                  </div>
                  <div
                    class="emotion-8"
                  />
                </div>
              </div>
              <div
                class="emotion-10"
                style="height:35px;left:512px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-7"
                  >
                    city
                  </div>
                  <div
                    class="emotion-8"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height:733px;overflow:visible;position:relative;width:1024px"
      >
        <div
          class="BottomLeftGrid_ScrollWrapper"
          style="left:0;overflow-x:hidden;overflow-y:hidden;position:absolute;height:733px;width:194.66666666666666px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-49"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:194.66666666666666px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto;left:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:194.66666666666666px;height:70px;max-width:194.66666666666666px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-39"
                data-rowindex="1"
                style="height:35px;left:0;position:absolute;top:0;width:24px"
              >
                <div
                  class="emotion-38"
                >
                  <div>
                    <label
                      class="emotion-4"
                      for="0"
                    >
                      <div
                        class="emotion-2"
                      >
                        <div
                          class="emotion-1"
                        >
                          <input
                            aria-checked="false"
                            class="emotion-0"
                            id="0"
                            type="checkbox"
                          />
                        </div>
                      </div>
                      <div
                        class="emotion-3"
                      >
                        Toggle row 0
                      </div>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-39"
                data-rowindex="1"
                style="height:35px;left:24px;position:absolute;top:0;width:170.66666666666666px"
              >
                <strong>
                  Brian Vaughn
                </strong>
              </div>
              <div
                class="emotion-39"
                data-rowindex="2"
                style="height:35px;left:0;position:absolute;top:35px;width:24px"
              >
                <div
                  class="emotion-38"
                >
                  <div>
                    <label
                      class="emotion-4"
                      for="1"
                    >
                      <div
                        class="emotion-2"
                      >
                        <div
                          class="emotion-1"
                        >
                          <input
                            aria-checked="false"
                            class="emotion-0"
                            id="1"
                            type="checkbox"
                          />
                        </div>
                      </div>
                      <div
                        class="emotion-3"
                      >
                        Toggle row 1
                      </div>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-39"
                data-rowindex="2"
                style="height:35px;left:24px;position:absolute;top:35px;width:170.66666666666666px"
              >
                <strong>
                  Jon Doe
                </strong>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-58"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:829.3333333333334px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:194.66666666666666px"
          tabindex="0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:682.6666666666666px;height:70px;max-width:682.6666666666666px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-39"
              data-rowindex="1"
              style="height:35px;left:0;position:absolute;top:0;width:170.66666666666666px"
            >
              <em>
                Software Engineer
              </em>
            </div>
            <div
              class="emotion-39"
              data-rowindex="1"
              style="height:35px;left:170.66666666666666px;position:absolute;top:0;width:170.66666666666666px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-39"
              data-rowindex="1"
              style="height:35px;left:341.3333333333333px;position:absolute;top:0;width:170.66666666666666px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-39"
              data-rowindex="1"
              style="height:35px;left:512px;position:absolute;top:0;width:170.66666666666666px"
            >
              <strong>
                San Jose
              </strong>
            </div>
            <div
              class="emotion-39"
              data-rowindex="2"
              style="height:35px;left:0;position:absolute;top:35px;width:170.66666666666666px"
            >
              <em>
                Product engineer
              </em>
            </div>
            <div
              class="emotion-39"
              data-rowindex="2"
              style="height:35px;left:170.66666666666666px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-39"
              data-rowindex="2"
              style="height:35px;left:341.3333333333333px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-39"
              data-rowindex="2"
              style="height:35px;left:512px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <strong>
                Mountain View
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-60"
  />
</div>
`;

exports[`CheckboxTable renders with checked row 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-65 {
  height: 100%;
}

.emotion-63 {
  font-weight: normal;
}

.emotion-63::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-62 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-53 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-53::-webkit-scrollbar {
  display: none;
}

.emotion-64 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

.emotion-7 {
  display: inline-block;
}

.emotion-34 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-34::-webkit-scrollbar {
  display: none;
}

.emotion-34 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-17 {
  overflow: unset !important;
}

.emotion-17 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-12 {
  box-sizing: border-box;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-12:hover .staticClass_dragHandleWrapper,
.emotion-12:active .staticClass_dragHandleWrapper {
  visibility: visible;
}

.emotion-11 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-10 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
}

.emotion-8 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 1;
  text-align: left;
  text-transform: capitalize;
  font-weight: bold;
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-46 {
  border-color: #DADDE2;
  background-color: #FFF;
  border-style: solid;
  border-width: 1px;
  height: 15px;
  width: 15px;
  border-radius: 4px;
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-51 {
  box-sizing: border-box;
  border-bottom: 1px solid #DADDE2;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-42 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 1;
  text-align: left;
}

.emotion-3 {
  border-color: #DADDE2;
  background-color: #FFF;
  border-style: solid;
  border-width: 1px;
  height: 15px;
  width: 15px;
  border-radius: 4px;
  position: relative;
  background-color: #7D58FF;
  border-color: #7D58FF;
}

.emotion-2 {
  box-sizing: border-box;
  height: 100%;
  padding: 2px;
  position: absolute;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 svg {
  height: 100%;
  width: 100%;
}

.emotion-1 {
  vertical-align: middle;
  fill: #FFF;
}

.emotion-1 use {
  pointer-events: none;
}

.emotion-43 {
  background-color: #F7F8F9;
  mix-blend-mode: multiply;
  will-change: left;
  box-sizing: border-box;
  border-bottom: 1px solid #DADDE2;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-65"
>
  <div
    class="emotion-63"
    style="overflow:visible;height:0;width:0"
  >
    <div
      style="height:768px;overflow:visible;width:1024px"
    >
      <div
        style="height:35px;position:relative;width:1024px"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-17"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:194.66666666666666px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:0;top:0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:194.66666666666666px;height:35px;max-width:194.66666666666666px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-12"
              style="height:35px;left:0;position:absolute;top:0;width:24px"
            >
              <div
                class="emotion-11"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-7"
                    >
                      <div>
                        <label
                          class="emotion-6"
                          for="headerCheckbox"
                        >
                          <div
                            class="emotion-4"
                          >
                            <div
                              class="emotion-3"
                            >
                              <input
                                aria-checked="mixed"
                                class="emotion-0"
                                id="headerCheckbox"
                                type="checkbox"
                              />
                              <span
                                class="emotion-2"
                              >
                                <svg
                                  aria-label="system-minus icon"
                                  class="emotion-1"
                                  height="16"
                                  preserveAspectRatio="xMinYMin meet"
                                  role="img"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <use
                                    href="#system-minus"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                          <div
                            class="emotion-5"
                          >
                            Toggle all rows
                          </div>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-10"
                />
              </div>
            </div>
            <div
              class="emotion-12"
              style="height:35px;left:24px;position:absolute;top:0;width:170.66666666666666px"
            >
              <div
                class="emotion-11"
              >
                <div
                  class="emotion-9"
                >
                  name
                </div>
                <div
                  class="emotion-10"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TopRightGrid_ScrollWrapper"
          style="left:194.66666666666666px;overflow-x:hidden;overflow-y:hidden;position:absolute;top:0;height:35px;width:829.3333333333334px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-34"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:829.3333333333334px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:0;top:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:682.6666666666666px;height:35px;max-width:682.6666666666666px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-12"
                style="height:35px;left:0;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-9"
                  >
                    role
                  </div>
                  <div
                    class="emotion-10"
                  />
                </div>
              </div>
              <div
                class="emotion-12"
                style="height:35px;left:170.66666666666666px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-9"
                  >
                    state
                  </div>
                  <div
                    class="emotion-10"
                  />
                </div>
              </div>
              <div
                class="emotion-12"
                style="height:35px;left:341.3333333333333px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-9"
                  >
                    zipcode
                  </div>
                  <div
                    class="emotion-10"
                  />
                </div>
              </div>
              <div
                class="emotion-12"
                style="height:35px;left:512px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-9"
                  >
                    city
                  </div>
                  <div
                    class="emotion-10"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height:733px;overflow:visible;position:relative;width:1024px"
      >
        <div
          class="BottomLeftGrid_ScrollWrapper"
          style="left:0;overflow-x:hidden;overflow-y:hidden;position:absolute;height:733px;width:194.66666666666666px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-53"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:194.66666666666666px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto;left:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:194.66666666666666px;height:70px;max-width:194.66666666666666px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-43"
                data-rowindex="1"
                style="height:35px;left:0;position:absolute;top:0;width:24px"
              >
                <div
                  class="emotion-42"
                >
                  <div>
                    <label
                      class="emotion-6"
                      for="0"
                    >
                      <div
                        class="emotion-4"
                      >
                        <div
                          class="emotion-3"
                        >
                          <input
                            aria-checked="true"
                            checked=""
                            class="emotion-0"
                            id="0"
                            type="checkbox"
                          />
                          <span
                            class="emotion-2"
                          >
                            <svg
                              aria-label="system-check icon"
                              class="emotion-1"
                              height="16"
                              preserveAspectRatio="xMinYMin meet"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <use
                                href="#system-check"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="emotion-5"
                      >
                        Toggle row 0
                      </div>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-43"
                data-rowindex="1"
                style="height:35px;left:24px;position:absolute;top:0;width:170.66666666666666px"
              >
                <strong>
                  Brian Vaughn
                </strong>
              </div>
              <div
                class="emotion-51"
                data-rowindex="2"
                style="height:35px;left:0;position:absolute;top:35px;width:24px"
              >
                <div
                  class="emotion-42"
                >
                  <div>
                    <label
                      class="emotion-6"
                      for="1"
                    >
                      <div
                        class="emotion-4"
                      >
                        <div
                          class="emotion-46"
                        >
                          <input
                            aria-checked="false"
                            class="emotion-0"
                            id="1"
                            type="checkbox"
                          />
                        </div>
                      </div>
                      <div
                        class="emotion-5"
                      >
                        Toggle row 1
                      </div>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-51"
                data-rowindex="2"
                style="height:35px;left:24px;position:absolute;top:35px;width:170.66666666666666px"
              >
                <strong>
                  Jon Doe
                </strong>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-62"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:829.3333333333334px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:194.66666666666666px"
          tabindex="0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:682.6666666666666px;height:70px;max-width:682.6666666666666px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-43"
              data-rowindex="1"
              style="height:35px;left:0;position:absolute;top:0;width:170.66666666666666px"
            >
              <em>
                Software Engineer
              </em>
            </div>
            <div
              class="emotion-43"
              data-rowindex="1"
              style="height:35px;left:170.66666666666666px;position:absolute;top:0;width:170.66666666666666px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-43"
              data-rowindex="1"
              style="height:35px;left:341.3333333333333px;position:absolute;top:0;width:170.66666666666666px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-43"
              data-rowindex="1"
              style="height:35px;left:512px;position:absolute;top:0;width:170.66666666666666px"
            >
              <strong>
                San Jose
              </strong>
            </div>
            <div
              class="emotion-51"
              data-rowindex="2"
              style="height:35px;left:0;position:absolute;top:35px;width:170.66666666666666px"
            >
              <em>
                Product engineer
              </em>
            </div>
            <div
              class="emotion-51"
              data-rowindex="2"
              style="height:35px;left:170.66666666666666px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-51"
              data-rowindex="2"
              style="height:35px;left:341.3333333333333px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-51"
              data-rowindex="2"
              style="height:35px;left:512px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <strong>
                Mountain View
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-64"
  />
</div>
`;

exports[`CheckboxTable renders with disabled and muted row 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-55 {
  height: 100%;
}

.emotion-53 {
  font-weight: normal;
}

.emotion-53::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-52 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-43 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-43::-webkit-scrollbar {
  display: none;
}

.emotion-54 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

.emotion-5 {
  display: inline-block;
}

.emotion-32 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-32::-webkit-scrollbar {
  display: none;
}

.emotion-32 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-15 {
  overflow: unset !important;
}

.emotion-15 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-10 {
  box-sizing: border-box;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-10:hover .staticClass_dragHandleWrapper,
.emotion-10:active .staticClass_dragHandleWrapper {
  visibility: visible;
}

.emotion-9 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-8 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
}

.emotion-6 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 1;
  text-align: left;
  text-transform: capitalize;
  font-weight: bold;
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-1 {
  border-color: #DADDE2;
  background-color: #FFF;
  border-style: solid;
  border-width: 1px;
  height: 15px;
  width: 15px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-41 {
  box-sizing: border-box;
  border-bottom: 1px solid #DADDE2;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-40 {
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  z-index: 1;
  text-align: left;
}

.emotion-33 {
  color: #76797E;
  box-sizing: border-box;
  border-bottom: 1px solid #DADDE2;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-55"
>
  <div
    class="emotion-53"
    style="overflow:visible;height:0;width:0"
  >
    <div
      style="height:768px;overflow:visible;width:1024px"
    >
      <div
        style="height:35px;position:relative;width:1024px"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-15"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:194.66666666666666px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:0;top:0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:194.66666666666666px;height:35px;max-width:194.66666666666666px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-10"
              style="height:35px;left:0;position:absolute;top:0;width:24px"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-6"
                  >
                    <div
                      class="emotion-5"
                    >
                      <div>
                        <label
                          class="emotion-4"
                          for="headerCheckbox"
                        >
                          <div
                            class="emotion-2"
                          >
                            <div
                              class="emotion-1"
                            >
                              <input
                                aria-checked="0"
                                class="emotion-0"
                                id="headerCheckbox"
                                type="checkbox"
                              />
                            </div>
                          </div>
                          <div
                            class="emotion-3"
                          >
                            Toggle all rows
                          </div>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-8"
                />
              </div>
            </div>
            <div
              class="emotion-10"
              style="height:35px;left:24px;position:absolute;top:0;width:170.66666666666666px"
            >
              <div
                class="emotion-9"
              >
                <div
                  class="emotion-7"
                >
                  name
                </div>
                <div
                  class="emotion-8"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TopRightGrid_ScrollWrapper"
          style="left:194.66666666666666px;overflow-x:hidden;overflow-y:hidden;position:absolute;top:0;height:35px;width:829.3333333333334px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-32"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:829.3333333333334px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:0;top:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:682.6666666666666px;height:35px;max-width:682.6666666666666px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-10"
                style="height:35px;left:0;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-7"
                  >
                    role
                  </div>
                  <div
                    class="emotion-8"
                  />
                </div>
              </div>
              <div
                class="emotion-10"
                style="height:35px;left:170.66666666666666px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-7"
                  >
                    state
                  </div>
                  <div
                    class="emotion-8"
                  />
                </div>
              </div>
              <div
                class="emotion-10"
                style="height:35px;left:341.3333333333333px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-7"
                  >
                    zipcode
                  </div>
                  <div
                    class="emotion-8"
                  />
                </div>
              </div>
              <div
                class="emotion-10"
                style="height:35px;left:512px;position:absolute;top:0;width:170.66666666666666px"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-7"
                  >
                    city
                  </div>
                  <div
                    class="emotion-8"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height:733px;overflow:visible;position:relative;width:1024px"
      >
        <div
          class="BottomLeftGrid_ScrollWrapper"
          style="left:0;overflow-x:hidden;overflow-y:hidden;position:absolute;height:733px;width:194.66666666666666px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-43"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:194.66666666666666px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto;left:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:194.66666666666666px;height:70px;max-width:194.66666666666666px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-33"
                data-rowindex="1"
                style="height:35px;left:0;position:absolute;top:0;width:24px"
              />
              <div
                class="emotion-33"
                data-rowindex="1"
                style="height:35px;left:24px;position:absolute;top:0;width:170.66666666666666px"
              >
                <strong>
                  Brian Vaughn
                </strong>
              </div>
              <div
                class="emotion-41"
                data-rowindex="2"
                style="height:35px;left:0;position:absolute;top:35px;width:24px"
              >
                <div
                  class="emotion-40"
                >
                  <div>
                    <label
                      class="emotion-4"
                      for="1"
                    >
                      <div
                        class="emotion-2"
                      >
                        <div
                          class="emotion-1"
                        >
                          <input
                            aria-checked="false"
                            class="emotion-0"
                            id="1"
                            type="checkbox"
                          />
                        </div>
                      </div>
                      <div
                        class="emotion-3"
                      >
                        Toggle row 1
                      </div>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="emotion-41"
                data-rowindex="2"
                style="height:35px;left:24px;position:absolute;top:35px;width:170.66666666666666px"
              >
                <strong>
                  Jon Doe
                </strong>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-52"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:829.3333333333334px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:194.66666666666666px"
          tabindex="0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:682.6666666666666px;height:70px;max-width:682.6666666666666px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-33"
              data-rowindex="1"
              style="height:35px;left:0;position:absolute;top:0;width:170.66666666666666px"
            >
              <em>
                Software Engineer
              </em>
            </div>
            <div
              class="emotion-33"
              data-rowindex="1"
              style="height:35px;left:170.66666666666666px;position:absolute;top:0;width:170.66666666666666px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-33"
              data-rowindex="1"
              style="height:35px;left:341.3333333333333px;position:absolute;top:0;width:170.66666666666666px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-33"
              data-rowindex="1"
              style="height:35px;left:512px;position:absolute;top:0;width:170.66666666666666px"
            >
              <strong>
                San Jose
              </strong>
            </div>
            <div
              class="emotion-41"
              data-rowindex="2"
              style="height:35px;left:0;position:absolute;top:35px;width:170.66666666666666px"
            >
              <em>
                Product engineer
              </em>
            </div>
            <div
              class="emotion-41"
              data-rowindex="2"
              style="height:35px;left:170.66666666666666px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-41"
              data-rowindex="2"
              style="height:35px;left:341.3333333333333px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-41"
              data-rowindex="2"
              style="height:35px;left:512px;position:absolute;top:35px;width:170.66666666666666px"
            >
              <strong>
                Mountain View
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-54"
  />
</div>
`;
